Changelog
=========

2020.3.0rc3 (unreleased)
------------------------

- Limit query to current repository in RepositoryPathSourceBinder. [njohner]
- Improve performance of the subdossier tree (on the dossier overview tab). [mbaechtold]
- Improve performance while determining repositoryfolder emptiness. [mbaechtold]
- Improve performance while determining leaf nodes. [mbaechtold]
- Add watcher role to task notification setting tab. [tinagerber]
- The widget used to select users or groups while protecting a business dossier now respects the sharing configuration. [mbaechtold]
- Fix an issue where solr facet labels have not been transformed correctly. [elioschmutz]
- Skip unknown attributes in POST @invitation endpoint. [elioschmutz]
- Add watchers, resources and subscriptions to tasks and forwarding in fixtures. [tinagerber]
- Fix activity bug when creating tasks with tasktemplates. [tinagerber]
- Add basic support for xlsx sources to bundle factory. [deiferni]
- Add new filename column to Favorites. [njohner]
- Implement @possible-watchers endpoint. [elioschmutz]
- Fix dossier link in chrome. [2e12]
- Add `is_admin_menu_visible` to the `@config` API endpoint. [mbaechtold]
- Watchers GET API: Also include info about referenced_users and referenced_watcher_roles. [tinagerber]
- Fix @solrsearch endpoint default sort order. [elioschmutz]
- Bump ftw.bumblebee to 3.9.0 which provides functionality for indexing checksums after bundle import. [buchi]


2020.3.0rc2 (2020-05-07)
------------------------

- Drop sorting by sortable_author for solr and avoid handling sorting parameters as fields. [deiferni]
- Add live chat to online documentation. [njohner]
- Bump ftw.monitor and ftw.contentstats to get performance metrics. [lgraf]
- Merge notification settings for tasks. [elioschmutz]
- Add more metadata to response of favorites endpoint (`review_state`, `is_subdossier` and `is_leafnode`). [mbaechtold]
- Improve performance when resolving large dossiers. [deiferni]